WIP: spring astro service autoconfiguration